"use strict";
Object.defineProperty(exports, "__esModule", { value: true });
exports.NetPbClassRef = void 0;
var pb_1 = require("./pb");
var NetPbClassRef = /** @class */ (function () {
    function NetPbClassRef() {
    }
    NetPbClassRef.streamReq = pb_1.pb.streamReq;
    NetPbClassRef.LoadProgressReq = pb_1.pb.LoadProgressReq;
    NetPbClassRef.ReadyReq = pb_1.pb.ReadyReq;
    NetPbClassRef.UnvarnishedReq = pb_1.pb.UnvarnishedReq;
    NetPbClassRef.HeartReq = pb_1.pb.HeartReq;
    NetPbClassRef.GiveUpReq = pb_1.pb.GiveUpReq;
    NetPbClassRef.ForceExitReq = pb_1.pb.ForceExitReq;
    NetPbClassRef.DiceNumReq = pb_1.pb.DiceNumReq;
    NetPbClassRef.MoveReq = pb_1.pb.MoveReq;
    NetPbClassRef.PlayExitReq = pb_1.pb.PlayExitReq;
    NetPbClassRef.MatchReq = pb_1.pb.MatchReq;
    NetPbClassRef.CancelMatchReq = pb_1.pb.CancelMatchReq;
    NetPbClassRef.NewRoomReq = pb_1.pb.NewRoomReq;
    NetPbClassRef.SignReq = pb_1.pb.SignReq;
    NetPbClassRef.GetAllUserMessageReq = pb_1.pb.GetAllUserMessageReq;
    NetPbClassRef.CheckZhuanPanReq = pb_1.pb.CheckZhuanPanReq;
    NetPbClassRef.ZhuanPanReq = pb_1.pb.ZhuanPanReq;
    NetPbClassRef.ShareMessageReq = pb_1.pb.ShareMessageReq;
    NetPbClassRef.ShareAwardReq = pb_1.pb.ShareAwardReq;
    NetPbClassRef.AiUidGetReq = pb_1.pb.AiUidGetReq;
    NetPbClassRef.PlayWithAiReq = pb_1.pb.PlayWithAiReq;
    NetPbClassRef.QueryAutoStatusReq = pb_1.pb.QueryAutoStatusReq;
    NetPbClassRef.CancelAutoStatusReq = pb_1.pb.CancelAutoStatusReq;
    NetPbClassRef.WordBroadCastReq = pb_1.pb.WordBroadCastReq;
    NetPbClassRef.StateChangeReq = pb_1.pb.StateChangeReq;
    NetPbClassRef.MsgItemSendReq = pb_1.pb.MsgItemSendReq;
    NetPbClassRef.ReJoinRoomReq = pb_1.pb.ReJoinRoomReq;
    NetPbClassRef.ZhuangPanLevelReq = pb_1.pb.ZhuangPanLevelReq;
    NetPbClassRef.ZhuangPanLevelUpTipReq = pb_1.pb.ZhuangPanLevelUpTipReq;
    NetPbClassRef.CheckIfNeedAiInvoiteReq = pb_1.pb.CheckIfNeedAiInvoiteReq;
    NetPbClassRef.SecUnvarnishedReq = pb_1.pb.SecUnvarnishedReq;
    NetPbClassRef.WinOrLoseRightNowReq = pb_1.pb.WinOrLoseRightNowReq;
    NetPbClassRef.AddCrystalCoinReq = pb_1.pb.AddCrystalCoinReq;
    NetPbClassRef.AddCoinReq = pb_1.pb.AddCoinReq;
    NetPbClassRef.TaskInfoReq = pb_1.pb.TaskInfoReq;
    NetPbClassRef.TaskRewardReq = pb_1.pb.TaskRewardReq;
    NetPbClassRef.EnterYuYinFanReq = pb_1.pb.EnterYuYinFanReq;
    NetPbClassRef.TaskInfo1Req = pb_1.pb.TaskInfo1Req;
    NetPbClassRef.TaskReward1Req = pb_1.pb.TaskReward1Req;
    NetPbClassRef.ZhuangPanLevel1MessageReq = pb_1.pb.ZhuangPanLevel1MessageReq;
    NetPbClassRef.ZhuangPanLevel1Req = pb_1.pb.ZhuangPanLevel1Req;
    NetPbClassRef.ZhuangPanLevel1UpTipReq = pb_1.pb.ZhuangPanLevel1UpTipReq;
    NetPbClassRef.GetAllSkin1Req = pb_1.pb.GetAllSkin1Req;
    NetPbClassRef.GetSkinSetting1Req = pb_1.pb.GetSkinSetting1Req;
    NetPbClassRef.BuySkin1Req = pb_1.pb.BuySkin1Req;
    NetPbClassRef.DecorateSkin1Req = pb_1.pb.DecorateSkin1Req;
    NetPbClassRef.PlaySceneAnimation1Req = pb_1.pb.PlaySceneAnimation1Req;
    NetPbClassRef.RedPointGetReq = pb_1.pb.RedPointGetReq;
    NetPbClassRef.RedPointSetReq = pb_1.pb.RedPointSetReq;
    NetPbClassRef.GetCoinWhenNoMoneyReq = pb_1.pb.GetCoinWhenNoMoneyReq;
    NetPbClassRef.GetVedioAwardReq = pb_1.pb.GetVedioAwardReq;
    NetPbClassRef.GetSceneVideoReq = pb_1.pb.GetSceneVideoReq;
    NetPbClassRef.PushMsgReq = pb_1.pb.PushMsgReq;
    NetPbClassRef.GetAppCoinReq = pb_1.pb.GetAppCoinReq;
    NetPbClassRef.ExchangeAppCoinReq = pb_1.pb.ExchangeAppCoinReq;
    NetPbClassRef.RaceGetReq = pb_1.pb.RaceGetReq;
    NetPbClassRef.RaceStartAndMatchReq = pb_1.pb.RaceStartAndMatchReq;
    NetPbClassRef.RaceMatchReq = pb_1.pb.RaceMatchReq;
    NetPbClassRef.RaceShareAwaidTicketReq = pb_1.pb.RaceShareAwaidTicketReq;
    NetPbClassRef.RaceGetFreeTicketReq = pb_1.pb.RaceGetFreeTicketReq;
    NetPbClassRef.RaceShareRebornReq = pb_1.pb.RaceShareRebornReq;
    NetPbClassRef.RaceBuyTicketReq = pb_1.pb.RaceBuyTicketReq;
    NetPbClassRef.AiGetListReq = pb_1.pb.AiGetListReq;
    NetPbClassRef.GetGlobalExchangeReq = pb_1.pb.GetGlobalExchangeReq;
    NetPbClassRef.TaskBoxReq = pb_1.pb.TaskBoxReq;
    NetPbClassRef.TaskBoxReceiveReq = pb_1.pb.TaskBoxReceiveReq;
    NetPbClassRef.SevenDayInfoReq = pb_1.pb.SevenDayInfoReq;
    NetPbClassRef.SelectRewardReq = pb_1.pb.SelectRewardReq;
    NetPbClassRef.Match2v2Req = pb_1.pb.Match2v2Req;
    NetPbClassRef.Match2v2EnterRoomReq = pb_1.pb.Match2v2EnterRoomReq;
    NetPbClassRef.Match2v2StageChangeReq = pb_1.pb.Match2v2StageChangeReq;
    NetPbClassRef.Match2v2ExitRoomReq = pb_1.pb.Match2v2ExitRoomReq;
    NetPbClassRef.MatchGhostReq = pb_1.pb.MatchGhostReq;
    NetPbClassRef.MatchGhostEnterRoomReq = pb_1.pb.MatchGhostEnterRoomReq;
    NetPbClassRef.MatchGhostStageChangeReq = pb_1.pb.MatchGhostStageChangeReq;
    NetPbClassRef.MatchGhostExitRoomReq = pb_1.pb.MatchGhostExitRoomReq;
    NetPbClassRef.GhostDiceNumReq = pb_1.pb.GhostDiceNumReq;
    NetPbClassRef.GhostMoveReq = pb_1.pb.GhostMoveReq;
    NetPbClassRef.GhostSettingReq = pb_1.pb.GhostSettingReq;
    NetPbClassRef.MatchSixModeReq = pb_1.pb.MatchSixModeReq;
    NetPbClassRef.SixModeDiceNumReq = pb_1.pb.SixModeDiceNumReq;
    NetPbClassRef.SixModeMoveReq = pb_1.pb.SixModeMoveReq;
    NetPbClassRef.GetAllSkin2Req = pb_1.pb.GetAllSkin2Req;
    NetPbClassRef.DiamondGetReq = pb_1.pb.DiamondGetReq;
    NetPbClassRef.GetSkinSetting2Req = pb_1.pb.GetSkinSetting2Req;
    NetPbClassRef.BuySkin2Req = pb_1.pb.BuySkin2Req;
    NetPbClassRef.DecorateSkin2Req = pb_1.pb.DecorateSkin2Req;
    NetPbClassRef.GetChannelReq = pb_1.pb.GetChannelReq;
    return NetPbClassRef;
}());
exports.NetPbClassRef = NetPbClassRef;
//# sourceMappingURL=NetPbClassRef.js.map