import { pb } from './pb'
export class NetPbClassRef {
    static readonly streamReq = pb.streamReq
    static readonly LoadProgressReq = pb.LoadProgressReq
    static readonly ReadyReq = pb.ReadyReq
    static readonly UnvarnishedReq = pb.UnvarnishedReq
    static readonly HeartReq = pb.HeartReq
    static readonly GiveUpReq = pb.GiveUpReq
    static readonly ForceExitReq = pb.ForceExitReq
    static readonly DiceNumReq = pb.DiceNumReq
    static readonly MoveReq = pb.MoveReq
    static readonly PlayExitReq = pb.PlayExitReq
    static readonly MatchReq = pb.MatchReq
    static readonly CancelMatchReq = pb.CancelMatchReq
    static readonly NewRoomReq = pb.NewRoomReq
    static readonly SignReq = pb.SignReq
    static readonly GetAllUserMessageReq = pb.GetAllUserMessageReq
    static readonly CheckZhuanPanReq = pb.CheckZhuanPanReq
    static readonly ZhuanPanReq = pb.ZhuanPanReq
    static readonly ShareMessageReq = pb.ShareMessageReq
    static readonly ShareAwardReq = pb.ShareAwardReq
    static readonly AiUidGetReq = pb.AiUidGetReq
    static readonly PlayWithAiReq = pb.PlayWithAiReq
    static readonly QueryAutoStatusReq = pb.QueryAutoStatusReq
    static readonly CancelAutoStatusReq = pb.CancelAutoStatusReq
    static readonly WordBroadCastReq = pb.WordBroadCastReq
    static readonly StateChangeReq = pb.StateChangeReq
    static readonly MsgItemSendReq = pb.MsgItemSendReq
    static readonly ReJoinRoomReq = pb.ReJoinRoomReq
    static readonly ZhuangPanLevelReq = pb.ZhuangPanLevelReq
    static readonly ZhuangPanLevelUpTipReq = pb.ZhuangPanLevelUpTipReq
    static readonly CheckIfNeedAiInvoiteReq = pb.CheckIfNeedAiInvoiteReq
    static readonly SecUnvarnishedReq = pb.SecUnvarnishedReq
    static readonly WinOrLoseRightNowReq = pb.WinOrLoseRightNowReq
    static readonly AddCrystalCoinReq = pb.AddCrystalCoinReq
    static readonly AddCoinReq = pb.AddCoinReq
    static readonly TaskInfoReq = pb.TaskInfoReq
    static readonly TaskRewardReq = pb.TaskRewardReq
    static readonly EnterYuYinFanReq = pb.EnterYuYinFanReq
    static readonly TaskInfo1Req = pb.TaskInfo1Req
    static readonly TaskReward1Req = pb.TaskReward1Req
    static readonly ZhuangPanLevel1MessageReq = pb.ZhuangPanLevel1MessageReq
    static readonly ZhuangPanLevel1Req = pb.ZhuangPanLevel1Req
    static readonly ZhuangPanLevel1UpTipReq = pb.ZhuangPanLevel1UpTipReq
    static readonly GetAllSkin1Req = pb.GetAllSkin1Req
    static readonly GetSkinSetting1Req = pb.GetSkinSetting1Req
    static readonly BuySkin1Req = pb.BuySkin1Req
    static readonly DecorateSkin1Req = pb.DecorateSkin1Req
    static readonly PlaySceneAnimation1Req = pb.PlaySceneAnimation1Req
    static readonly RedPointGetReq = pb.RedPointGetReq
    static readonly RedPointSetReq = pb.RedPointSetReq
    static readonly GetCoinWhenNoMoneyReq = pb.GetCoinWhenNoMoneyReq
    static readonly GetVedioAwardReq = pb.GetVedioAwardReq
    static readonly GetSceneVideoReq = pb.GetSceneVideoReq
    static readonly PushMsgReq = pb.PushMsgReq
    static readonly GetAppCoinReq = pb.GetAppCoinReq
    static readonly ExchangeAppCoinReq = pb.ExchangeAppCoinReq
    static readonly RaceGetReq = pb.RaceGetReq
    static readonly RaceStartAndMatchReq = pb.RaceStartAndMatchReq
    static readonly RaceMatchReq = pb.RaceMatchReq
    static readonly RaceShareAwaidTicketReq = pb.RaceShareAwaidTicketReq
    static readonly RaceGetFreeTicketReq = pb.RaceGetFreeTicketReq
    static readonly RaceShareRebornReq = pb.RaceShareRebornReq
    static readonly RaceBuyTicketReq = pb.RaceBuyTicketReq
    static readonly AiGetListReq = pb.AiGetListReq
    static readonly GetGlobalExchangeReq = pb.GetGlobalExchangeReq
    static readonly TaskBoxReq = pb.TaskBoxReq
    static readonly TaskBoxReceiveReq = pb.TaskBoxReceiveReq
    static readonly SevenDayInfoReq = pb.SevenDayInfoReq
    static readonly SelectRewardReq = pb.SelectRewardReq
    static readonly Match2v2Req = pb.Match2v2Req
    static readonly Match2v2EnterRoomReq = pb.Match2v2EnterRoomReq
    static readonly Match2v2StageChangeReq = pb.Match2v2StageChangeReq
    static readonly Match2v2ExitRoomReq = pb.Match2v2ExitRoomReq
    static readonly MatchGhostReq = pb.MatchGhostReq
    static readonly MatchGhostEnterRoomReq = pb.MatchGhostEnterRoomReq
    static readonly MatchGhostStageChangeReq = pb.MatchGhostStageChangeReq
    static readonly MatchGhostExitRoomReq = pb.MatchGhostExitRoomReq
    static readonly GhostDiceNumReq = pb.GhostDiceNumReq
    static readonly GhostMoveReq = pb.GhostMoveReq
    static readonly GhostSettingReq = pb.GhostSettingReq
    static readonly MatchSixModeReq = pb.MatchSixModeReq
    static readonly SixModeDiceNumReq = pb.SixModeDiceNumReq
    static readonly SixModeMoveReq = pb.SixModeMoveReq
    static readonly GetAllSkin2Req = pb.GetAllSkin2Req
    static readonly DiamondGetReq = pb.DiamondGetReq
    static readonly GetSkinSetting2Req = pb.GetSkinSetting2Req
    static readonly BuySkin2Req = pb.BuySkin2Req
    static readonly DecorateSkin2Req = pb.DecorateSkin2Req
    static readonly GetChannelReq = pb.GetChannelReq
}